<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center|end"
            android:text="@string/dateOfBill"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="@+id/guideline1"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toStartOf="@+id/tv_date"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_margin="5dp" />

    <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="2035-05-25"
            app:drawableRightCompat="@mipmap/arrow_down"
            app:layout_constraintTop_toTopOf="@+id/guideline1"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="108dp"
            app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

    <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:text="@string/typeOfBill"
                android:textColor="@color/black"
                android:textSize="17sp" />

        <RadioButton
                android:id="@+id/rb_income"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:gravity="start|center"
                android:text="@string/income"
                android:textColor="#000000"
                android:textSize="17sp" />

        <RadioButton
                android:id="@+id/rb_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="start|center"
                android:text="@string/cost"
                android:textColor="#000000"
                android:textSize="17sp" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.46" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:text="@string/Item_Description"
                android:textColor="@color/black"
                android:textSize="17sp" />

        <EditText
                android:id="@+id/et_remark"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/editext_selector"
                android:gravity="start|top"
                android:hint="@string/instructions"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:autofillHints="None"
                android:inputType="text"
                android:textColorHint="#757575" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline4"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:text="@string/tv_amount"
                android:textColor="@color/black"
                android:textSize="17sp" />

        <EditText
                android:id="@+id/et_amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/editext_selector"
                android:hint="@string/unit"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:autofillHints="0"
                android:textColorHint="#757575" />
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline6"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

    <include
            layout="@layout/title_booking"
            android:id="@+id/include"
            tools:layout_editor_absoluteY="163dp"
            tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:text="@string/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>